crates/mun_codegen/src/snapshots/mun_codegen__test__loop_expr.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn foo() {\n        loop {}\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

define void @foo() {
body:
  br label %loop

loop:                                             ; preds = %loop, %body
  br label %loop
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"
