crates/mun_codegen/src/snapshots/mun_codegen__test__loop_issue_llvm13.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn issue() -> i32 {\n        loop {\n        }\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define i32 @issue() {
body:
  br label %loop

loop:                                             ; preds = %loop, %body
  br label %loop
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
