crates/mun_codegen/src/snapshots/mun_codegen__test__negate_op_f32.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn negate(a: f32) -> f32 { -a }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define float @negate(float %0) {
body:
  %neg = fneg float %0
  ret float %neg
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
